--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BookStoreAppDbConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BookStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
